force-app/main/default/objects/IntegrationLog__c/fields/CalloutType__c.field-meta.xml
<CustomField>
    <fullName>CalloutType__c</fullName>
    <label>Callout Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>