force-app/main/default/objects/IntegrationLog__c/fields/ResponseStatus__c.field-meta.xml
<CustomField>
    <fullName>ResponseStatus__c</fullName>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>